@@ -2,7 +2,8 @@
 
     * src/gtksheet/gtksheet.c: Clean code; update code style, fix indentations.
       Convert plain text to Doxygen documenation. Remove conditional definition
-      of _gtk_sheet_draw_pixmap and rename to gtk_sheet_draw_pixmap.
+      of _gtk_sheet_draw_pixmap and rename to gtk_sheet_draw_pixmap and eliminate
+      unused GdkGC second argument.
 
 2020-10-19 Wiley E. Hill <wileyhill@gmail.com>
 
